# prp-framework

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHON-INTEGRATION.md  CLAUDE.md  README.md  install-prp.sh  package-lock.json  package.json  setup-prp.sh  trivy.yaml  vite.config.js
.claude/: prp-settings.json  prp-settings.template.json  settings.json
.claude/agents/: code-simplifier.md  frontend_developer.md
.claude/hooks/: README.md  auto-format.sh  auto_allow_readonly.py  backup_transcript.py  hook_handler.py  log_failures.py  prp_settings.py  status_line.py  structure_change.py  (+1 more)
PRP-PACKAGE/: README.md  settings-reference.json
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/auth/: google.py
backend/models/: __init__.py  database.py  notification.py
backend/services/: __init__.py  asana_service.py  base.py  gmail_service.py  outlook_service.py  plane_service.py  slack_service.py
backend/ws/: __init__.py  manager.py
prp-browser.nvim/: README.md
ralph/: PROMPT_build.md  PROMPT_qa.md  PROMPT_unified.md  loop.sh
scripts/: branch-viz-template.html  branch-viz.py  check-file-size.sh  coverage-report.sh  doctor-report-template.html  doctor-report.py  lint-frontend.sh  qa-gate-check.sh  qa-metrics.py  qa-report-template.html  qa-report.py  reports-hub-template.html  reports-hub.py  security-scan.sh  start-observability.sh  stop-observability.sh  tmux-input-watcher.sh  transcript-analyser-template.html  transcript-analyser.py  trivy-precommit.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
(+128 files in other folders)
