[project]
name = "command-center-backend"
version = "0.1.0"
description = "Command Center - Unified notification aggregator backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    # Google APIs
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.149.0",
    "google-cloud-pubsub>=2.23.0",
    # Microsoft Graph (Outlook)
    "msal>=1.31.0",
    "msgraph-sdk>=1.12.0",
    # Slack
    "slack-sdk>=3.33.0",
    "slack-bolt>=1.21.0",
    # Asana
    "asana>=5.0.10",
    # Database
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.35",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common pitfalls)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["models", "services", "ws", "auth", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
